# tap-pypi-singer

./: .gitignore  README.md  meltano.yml  plugin_usage-20210709T192615.csv  pyproject.toml  tap-pypi-singer.sh  tox.ini
tap_pypi_singer/: client.py  streams.py  tap.py
tap_pypi_singer/tests/: __init__.py  test_core.py
