[tool.poetry]
name = "tap-pypi-singer"
version = "0.0.1"
description = "`tap-pypi-singer` is a Singer tap for PyPISinger, built with the Meltano SDK for Singer Taps."
authors = ["Pat Nadolny"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-pypi-singer = 'tap_pypi_singer.tap:TapPyPISinger.cli'
